# expdbusservice

./: CMakeLists.txt  README
include/: timeinfo_client.hpp  timeinfo_server.hpp
interface/: timeinfo.xml
service/: com.example.timeinfo.service  timeinfo.service
src/: timeinfo_client.cpp  timeinfo_cmain.cpp  timeinfo_server.cpp  timeinfo_smain.cpp
